<resources>
    <string name="app_name">分级诊疗患者端</string>
    <string name="consultation_time">会诊时间:</string>
    <string name="patient_integration">患者评价</string>
    <string name="home_menu_trsnsfer_treatment">转诊</string>
    <string name="home_menu_register">预约管理</string>
    <string name="sign_up">注册</string>
    <string name="sign_out">账户退出</string>
    <string name="ok">确定</string>
    <string name="ok_button_text">确&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="save_button_text">保&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;存</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="gender">性别</string>
    <string name="job_title">职称</string>
    <string name="duty">职务</string>
    <string name="idcard">证件号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="phone">手机号码</string>
    <string name="medicare_card">医保卡</string>
    <string name="birthday">出生日期</string>
    <string name="name">姓名</string>
    <string name="remove">刪除</string>
    <string name="save_to_gallery">保存到相册</string>
    <string name="save_picture">保存图片</string>
    <string name="detail">详情</string>
    <string name="search">搜&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;索</string>
    <string name="unlimited">不限</string>
    <string name="system_message">系统消息</string>
    <string name="dynamic">个人动态</string>
    <string name="introduction">个人介绍</string>
    <string name="good_at">擅长领域</string>
    <string name="achievement">成果荣誉</string>
    <string name="sign_in">登&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="input_phone">输入手机号</string>
    <string name="input_password">请输入邀请码</string>
    <string name="verify_phone_recover_password">找回密码</string>
    <string name="verify_phone_input_phone">输入手机号</string>
    <string name="verify_phone_input_valid_code">输入验证码</string>
    <string name="verify_phone_valid_code_obtain">获取验证码</string>
    <string name="register_title">完善信息</string>
    <string name="register_hint">请完善您的个人信息，信息提交后，将不可更改</string>
    <string name="register_hospital">医院</string>
    <string name="register_department">专科</string>
    <string name="register_job_title">职称</string>
    <string name="find_by_hospital_title">按医院查找</string>
    <string name="select_department_title">选择科室</string>
    <string name="select_job_title_title">选择职称</string>
    <string name="select_duty_title">选择职务</string>
    <string name="reset_password_title">重置密码</string>
    <string name="home_tab_text_1">首页</string>
    <string name="home_tab_text_2">消息</string>
    <string name="home_tab_text_3">我的</string>
    <string name="home_menu_advisory">患者咨询</string>
    <string name="home_menu_clinic">会诊管理</string>
    <string name="home_menu_cloud_clinic">云门诊</string>
    <string name="home_menu_patient">患者管理</string>
    <string name="home_todo">待处理任务(%1$d)</string>
    <string name="home_task_item_explain">会诊说明:%1$s</string>
    <string name="user_my_sign">我的签名</string>
    <string name="user_settings">基础设置</string>
    <string name="information_title">个人信息</string>
    <string name="information_avatar">头像</string>
    <string name="information_personal">个人信息</string>
    <string name="information_name">姓名</string>
    <string name="information_id_card">证件号码</string>
    <string name="information_email">电子邮箱</string>
    <string name="information_education">最高学历</string>
    <string name="information_working_years">工作年份</string>
    <string name="information_practice_information">执业信息</string>
    <string name="information_hospital">医院名称</string>
    <string name="information_department">专科</string>
    <string name="email_input">输入邮箱</string>
    <string name="information_input_content">请输入内容...</string>
    <string name="setting">设置</string>
    <string name="setting_no_disturb">免打扰</string>
    <string name="setting_features">功能介绍</string>
    <string name="setting_language">多语言</string>
    <string name="setting_modify_password">修改密码</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_contact">联系我们</string>
    <string name="setting_clear_cache_hint">确定要清除缓存吗？</string>
    <string name="setting_clear_cache_option">立即清除</string>
    <string name="setting_input_old_password">输入旧密码</string>
    <string name="setting_input_new_password">输入新密码</string>
    <string name="setting_input_new_password_again">再次输入新密码</string>
    <string name="sign_title">我的签名</string>
    <string name="sign_verify_password">验证密码</string>
    <string name="sign_verify_password_hint">为了确保您的帐户安全，请先输入您的登录密码</string>
    <string name="sign_input_error_hint">请输入正确的密码</string>
    <string name="sign_forget_password">忘记密码</string>
    <string name="sign_your_signature">您的签名</string>
    <string name="sign_resign">重新签名</string>
    <string name="sign_hint">签名代表您的个人签名，在回复会诊意见时使用，具有法律效益。</string>
    <string name="sign_modify_title">写入签名</string>
    <string name="sign_clear">清除</string>
    <string name="sign_commit">提交签名</string>
    <string name="language_title">多语言</string>
    <string name="patient_manager_title">患者管理</string>
    <string name="new_patient_title">新的患者</string>
    <string name="patient_detail_add_tags">+添加标签</string>
    <string name="patient_detail_emr">电子病历</string>
    <string name="patient_detail_patient_description">患者描述</string>
    <string name="patient_detail_no_description">暂无描述</string>
    <string name="modify_desc_title">修改描述</string>
    <string name="modify_desc_input_hint">请输入患者描述...</string>
    <string name="my_tags_title">我的标签</string>
    <string name="add_tags_title">添加标签</string>
    <string name="add_tags_input_hint">输入标签名称</string>
    <string name="add_tags_recommend_text">推荐标签</string>
    <string name="emr_list_title">%1$s的病历</string>
    <string name="emr_list_create_title">新建病历</string>
    <string name="emr_list_create_input_hint">输入病历的名称</string>
    <string name="consultation_manager_title">会诊管理</string>
    <string name="consultation_manager_tab_text_1">我的申请</string>
    <string name="consultation_manager_tab_text_2">我的会诊</string>
    <string name="consultation_list_filter_text_1">全部</string>
    <string name="consultation_list_filter_text_2">未处理</string>
    <string name="consultation_list_filter_text_3">会诊中</string>
    <string name="consultation_list_filter_text_4">已完成</string>
    <string name="consultation_list_item_describe">描述:</string>
    <string name="consultation_list_item_join_doctor">邀请医生:</string>
    <string name="consultation_list_item_my_status">会诊状态:</string>
    <string name="consultation_list_menu_text_1">点名会诊</string>
    <string name="consultation_list_menu_text_2">会诊中心</string>
    <string name="create_consultation_title">会诊申请</string>
    <string name="create_consultation_select_patient">选择患者</string>
    <string name="create_consultation_select_doctor">邀请会诊医生</string>
    <string name="create_consultation_diagnosis">初步诊断</string>
    <string name="create_consultation_diagnosis_input_hint">输入对患者的初步诊断</string>
    <string name="create_consultation_explain">会诊说明</string>
    <string name="create_consultation_explain_input_hint">可以输入患者的病情症状和本次会诊的目的</string>
    <string name="create_consultation_expected_time">期望时间</string>
    <string name="create_consultation_upload_pictures">上传图片资料</string>
    <string name="create_consultation_upload_pictures_explain">(病症部位、检查报告或其他病情资料)</string>
    <string name="create_consultation_emr_text">电子病历:%1$s</string>
    <string name="create_consultation_emr_system_create_text">电子病历:系统创建一张新病历</string>
    <string name="create_consultation_expected_department">期望科室</string>
    <string name="create_consultation_doctor_job_title">医生职称</string>
    <string name="select_patient_history">历史患者</string>
    <string name="select_patient_search_input_hint">输入患者姓名</string>
    <string name="patient_confirm_title">患者信息确认</string>
    <string name="patient_confirm_hint">请核对信息，无误直接确认，有错误先修改，再确认</string>
    <string name="patient_confirm_select_emr_title">选择病历</string>
    <string name="patient_confirm_select_emr_hint">是否选择一份已经存在的病历?</string>
    <string name="select_doctor_title">选择医生</string>
    <string name="select_doctor_common">常用医生</string>
    <string name="select_doctor_search_by_condition">按条件查找医生</string>
    <string name="select_doctor_my_focus">我关注的医生</string>
    <string name="select_doctor_search_by_hospital">按医院查找医生</string>
    <string name="search_doctor_by_condition_title">搜索医生</string>
    <string name="search_doctor_by_condition_input_doctor_name_hint">输入医生的姓名</string>
    <string name="search_doctor_by_condition_goodat">擅长疾病</string>
    <string name="search_doctor_by_condition_input_goodat_hint">输入医生擅长的疾病</string>
    <string name="select_city_title">省市选择</string>
    <string name="select_doctor_search_by_hospital_title">按医院查找</string>
    <string name="hospital_home_title">医院主页</string>
    <string name="hospital_home_introduction">医院简介</string>
    <string name="primary_diagnosis_input_hint">输入疾病名称或首字母</string>
    <string name="primary_diagnosis_undiagnosed">未确诊</string>
    <string name="select_picture_type_title">选择图片类型</string>
    <string name="select_picture_type_text">选择类型</string>
    <string name="search_hospital_title">搜索医院</string>
    <string name="search_hospital_input_hint">输入医院名称</string>
    <string name="expected_department_title">期望科室</string>
    <string name="expected_department_add_hint">添加期望科室(最多选择5个)</string>
    <string name="expected_department_add_button_text">继续添加</string>
    <string name="consultation_details_title">会诊单详情</string>
    <string name="consultation_details_group">讨论组</string>
    <string name="consultation_details_status">状态:&#160;</string>
    <string name="consultation_details_patient_info">患者信息</string>
    <string name="consultation_details_diagnosis">初步诊断</string>
    <string name="consultation_details_explain">会诊说明</string>
    <string name="consultation_details_look_at_more_emr">查看更多病历资料&#160;&#160;>></string>
    <string name="evaluate_edit_situation_title">治疗情况及处理情况</string>
    <string name="evaluate_edit_situation_input_hint">会诊医生给出的会诊意见对于患者治疗的效果</string>
    <string name="evaluate_edit_condition_title">目前病情(康复情况)</string>
    <string name="evaluate_edit_condition_input_hint">目前患者如何？是否有好转？具体现状描述</string>
    <string name="evaluate_edit_advice_title">本次会诊的意见或建议</string>
    <string name="evaluate_edit_advice_input_hint">对于本次会诊你认为有没有可以改进的地方？</string>
    <string name="evaluate_edit_gone_title">病人去向</string>
    <string name="evaluate_edit_gone_input_hint">目前病人的去向，是治疗康复？回家后续定期复查？还是其他？</string>
    <string name="f_bank_account_add_text1">持卡人</string>
    <string name="f_bank_account_add_text2">银行卡号</string>
    <string name="f_bank_account_add_text3">开户银行</string>
    <string name="f_bank_account_add_text4">开户网点</string>
    <string name="f_bank_account_add_hint3">请输入您本人银行卡开户行</string>
    <string name="f_bank_account_add_hint2">请输入您本人银行卡卡号</string>
    <string name="f_bank_account_add_hint4">请输入您本人银行卡开户网点</string>
    <string name="live_title">直播名称</string>
    <string name="live_content">直播描述</string>
    <string name="live_date">直播日期</string>
    <string name="live_price">观看价格</string>
    <string name="live_timestamp">预计时长</string>
    <string name="live_notifyable">是否需要通知关注的病人</string>
    <string name="live_bg">选择直播封面</string>
    <string name="save_live_button_text">保存直播</string>
    <string name="live_title_hint">请输入直播名称</string>
    <string name="live_timestamp_hint">预计开播时长</string>
    <string name="live_price_hint">观看直播的价格</string>
    <string name="live_date_hint">请选择直接开始时间</string>
    <string name="live_content_hint">请输入直播描述</string>
</resources>