<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_edit_situation_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_situation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@color/white"
            android:minHeight="80dp"
            android:textColor="@color/black"
            android:gravity="top|left"
            android:textSize="14sp"
            android:hint="@string/evaluate_edit_situation_input_hint" />

        <TextView
            android:id="@+id/tv_situation_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="0/1000"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_edit_condition_title"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/et_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@color/white"
            android:minHeight="80dp"
            android:textColor="@color/black"
            android:gravity="top|left"
            android:textSize="14sp"
            android:hint="@string/evaluate_edit_condition_input_hint" />

        <TextView
            android:id="@+id/tv_condition_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="0/1000"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_edit_advice_title"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/et_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@color/white"
            android:minHeight="80dp"
            android:textColor="@color/black"
            android:gravity="top|left"
            android:textSize="14sp"
            android:hint="@string/evaluate_edit_advice_input_hint" />

        <TextView
            android:id="@+id/tv_advice_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="0/1000"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_edit_gone_title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@color/white"
            android:minHeight="80dp"
            android:textColor="@color/black"
            android:gravity="top|left"
            android:textSize="14sp"
            android:hint="@string/evaluate_edit_gone_input_hint" />

        <TextView
            android:id="@+id/tv_gone_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="0/1000"
            android:layout_gravity="right" />
    </LinearLayout>
</ScrollView>