<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <com.wxsoft.teleconsultation.ui.widget.ClearableEditText
        android:id="@+id/cet_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/verify_phone_input_phone"
        android:background="@android:color/transparent"
        android:inputType="phone"
        android:textSize="16sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:imeOptions="actionNext" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/comm_list_divider_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.wxsoft.teleconsultation.ui.widget.ClearableEditText
            android:id="@+id/cet_valid_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/verify_phone_input_valid_code"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_get_valid_code"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/verify_phone_valid_code_obtain"
            android:textColor="#ff888888"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/comm_list_divider_color" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/primary_btn_bg"
        android:text="@string/ok_button_text"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>